# Page_Memory_Management

./: .gitignore  CMakeLists.txt  REA1DME.md  README.md
client/: CMakeLists.txt
client/head/: client.h
client/src/: CMakeLists.txt  client.c  main.c  test.c
kernel/: CMakeLists.txt
kernel/head/: head.h  memory.h  pageTable.h  process.h  processControlBlock.h  queueLite.h  system.h
kernel/source/: CMakeLists.txt  memory.c  process.c  processControlBlock.c  queueLite.c
procImage/: README.md
src/head/: head.h  memory.h  pageTable.h  process.h  processControlBlock.h  queueLite.h  system.h
src/source/: CMakeLists.txt  head.c  pageTable.c  process.c  processControlBlock.c  queueLite.c  system.c
